@@ -9,7 +9,7 @@ Vcs-Bzr: http://bazaar.launchpad.net/~kirkland/pictor/main
 
 Package: pictor
 Architecture: all
-Depends: ${misc:Depends}, debconf (>= 0.5) | debconf-2.0, apache2, libapache2-mod-php5, php5-imagick, famfamfam-silk, run-one, libav-tools
+Depends: ${misc:Depends}, debconf (>= 0.5) | debconf-2.0, apache2, libapache2-mod-php5, php5-cli, php5-imagick, famfamfam-silk, run-one, libav-tools
 Suggests: libavcodec-extra-53
 Recommends: pictor-unload
 Description: web application for browsing your pictures
